// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`aws.s3.list given: [case1] --help flag when: [t0] --help is passed then: help output matches snapshot 1`] = `
"🐈 heres the deal...

🔮 aws.s3.list

usage:
  rhx aws.s3.list --env <env>
  rhx aws.s3.list --env <env> --uri s3://bucket/prefix/
  rhx aws.s3.list --env <env> --bucket <name>

options:
  --env       environment: test, prep, or prod
  --uri       s3://bucket/prefix format
  --bucket    s3 bucket name
  --prefix    filter objects by prefix
  --since     filter by recency (30m, 1h, 7d)
  --limit     max results (default: 50)
  --help      show this help

examples:
  rhx aws.s3.list --env prep
  rhx aws.s3.list --env prep --uri s3://ahbode-logs/2026/ --since 1h
"
`;

exports[`aws.s3.list given: [case2] -h flag when: [t0] -h is passed then: help output matches snapshot 1`] = `
"🐈 heres the deal...

🔮 aws.s3.list

usage:
  rhx aws.s3.list --env <env>
  rhx aws.s3.list --env <env> --uri s3://bucket/prefix/
  rhx aws.s3.list --env <env> --bucket <name>

options:
  --env       environment: test, prep, or prod
  --uri       s3://bucket/prefix format
  --bucket    s3 bucket name
  --prefix    filter objects by prefix
  --since     filter by recency (30m, 1h, 7d)
  --limit     max results (default: 50)
  --help      show this help

examples:
  rhx aws.s3.list --env prep
  rhx aws.s3.list --env prep --uri s3://ahbode-logs/2026/ --since 1h
"
`;

exports[`aws.s3.list given: [case3] help as positional arg when: [t0] help is passed then: help output matches snapshot 1`] = `
"🐈 heres the deal...

🔮 aws.s3.list

usage:
  rhx aws.s3.list --env <env>
  rhx aws.s3.list --env <env> --uri s3://bucket/prefix/
  rhx aws.s3.list --env <env> --bucket <name>

options:
  --env       environment: test, prep, or prod
  --uri       s3://bucket/prefix format
  --bucket    s3 bucket name
  --prefix    filter objects by prefix
  --since     filter by recency (30m, 1h, 7d)
  --limit     max results (default: 50)
  --help      show this help

examples:
  rhx aws.s3.list --env prep
  rhx aws.s3.list --env prep --uri s3://ahbode-logs/2026/ --since 1h
"
`;

exports[`aws.s3.list given: [case4] credentials not unlocked when: [t0] skill runs without prior unlock then: error output matches snapshot 1`] = `
"🐈 wet paws...

🔮 aws.s3.list
   ├─ absent AWS_PROFILE from keyrack for env=prep
   └─ hint: rhx keyrack unlock --owner ehmpath --env prep

🔐 keyrack
   └─ ehmpathy.prep.AWS_PROFILE
      ├─ status: locked 🔒
      └─ tip: rhx keyrack unlock --owner ehmpath --env prep --key AWS_PROFILE

"
`;

exports[`aws.s3.list given: [case5] absent --env when: [t0] skill runs without --env then: error output matches snapshot 1`] = `
"🐈 belay that...

🔮 aws.s3.list
   ├─ absent required arg: --env
   └─ must be: test, prep, or prod
"
`;

exports[`aws.s3.list given: [case6] invalid --uri format (not s3://) when: [t0] skill runs with https:// uri then: error output matches snapshot 1`] = `
"🐈 belay that...

🔮 aws.s3.list
   ├─ invalid --uri: https://bucket/key
   └─ must be: s3://bucket/prefix
"
`;

exports[`aws.s3.list given: [case7] invalid --since format when: [t0] skill runs with --since abc then: error output matches snapshot 1`] = `
"🐈 belay that...

🔮 aws.s3.list
   ├─ invalid --since: abc
   └─ must be: Nm, Nh, or Nd (e.g. 30m, 1h, 7d)
"
`;

exports[`aws.s3.list given: [case8] unknown option when: [t0] skill runs with --unknown-flag then: error output matches snapshot 1`] = `
"🐈 belay that...

🔮 aws.s3.list
   ├─ unknown argument: --unknown-flag
   └─ hint: rhx aws.s3.list help
"
`;

exports[`aws.s3.list given: [case9] list buckets when: [t0] skill runs with only --env then: output matches snapshot 1`] = `
"🐈 chartin course...

🔮 aws.s3.list --env test
   ├─ found: <N> buckets
   └─ buckets
      ├─ <BUCKETS OF OTHERS WHO SHARE THIS ACCOUNT>
      └─ rhachet-roles-ghlitch-test (2026-06-21)

🐈 smooth sailin!

🔮 aws.s3.list --env test
   └─ 5 buckets
"
`;

exports[`aws.s3.list given: [case12] list with prefix that has objects when: [t0] skill lists demo/ prefix then: output matches snapshot 1`] = `
"🐈 chartin course...

🔮 aws.s3.list --env test --uri s3://rhachet-roles-ghlitch-test/demo/
   ├─ path: s3://rhachet-roles-ghlitch-test/demo/
   ├─ found: 3 objects
   └─ objects
      ├─ demo/ (0 bytes, YYYY-MM-DD HH:MM:SS)
      ├─ demo/date=2026-06-21/ (0 bytes, YYYY-MM-DD HH:MM:SS)
      └─ demo/date=2026-06-21/hello.md (2 bytes, YYYY-MM-DD HH:MM:SS)

🐈 smooth sailin!

🔮 aws.s3.list --env test --uri s3://rhachet-roles-ghlitch-test/demo/
   └─ 3 objects
"
`;

exports[`aws.s3.list given: [case13] list with prefix that has no objects when: [t0] skill lists prefix with no objects then: output matches snapshot 1`] = `
"🐈 chartin course...

🔮 aws.s3.list --env test --uri s3://rhachet-roles-ghlitch-test/nonexistent-prefix/
   ├─ path: s3://rhachet-roles-ghlitch-test/nonexistent-prefix/
   └─ (empty)

🐈 smooth sailin!

🔮 aws.s3.list --env test --uri s3://rhachet-roles-ghlitch-test/nonexistent-prefix/
   └─ 0 objects
"
`;

exports[`aws.s3.list given: [case14] list with --prefix flag when: [t0] skill uses --bucket and --prefix then: output matches snapshot 1`] = `
"🐈 chartin course...

🔮 aws.s3.list --env test --bucket rhachet-roles-ghlitch-test --prefix demo/
   ├─ path: s3://rhachet-roles-ghlitch-test/demo/
   ├─ found: 3 objects
   └─ objects
      ├─ demo/ (0 bytes, YYYY-MM-DD HH:MM:SS)
      ├─ demo/date=2026-06-21/ (0 bytes, YYYY-MM-DD HH:MM:SS)
      └─ demo/date=2026-06-21/hello.md (2 bytes, YYYY-MM-DD HH:MM:SS)

🐈 smooth sailin!

🔮 aws.s3.list --env test --bucket rhachet-roles-ghlitch-test --prefix demo/
   └─ 3 objects
"
`;

exports[`aws.s3.list given: [case17] list with --since filter that excludes all when: [t0] skill lists with --since 1m (very recent) then: output matches snapshot 1`] = `
"🐈 chartin course...

🔮 aws.s3.list --env test --uri s3://rhachet-roles-ghlitch-test/demo/
   ├─ path: s3://rhachet-roles-ghlitch-test/demo/
   └─ (empty since 1m)

🐈 smooth sailin!

🔮 aws.s3.list --env test --uri s3://rhachet-roles-ghlitch-test/demo/
   └─ 0 objects (since 1m)
"
`;

exports[`aws.s3.list given: [case18] empty bucket scenario (zero objects output format) when: [t0] skill lists bucket with zero objects then: output matches snapshot 1`] = `
"🐈 chartin course...

🔮 aws.s3.list --env test --bucket rhachet-roles-ghlitch-test --prefix zzz-empty-bucket-test-never-exists/
   ├─ path: s3://rhachet-roles-ghlitch-test/zzz-empty-bucket-test-never-exists/
   └─ (empty)

🐈 smooth sailin!

🔮 aws.s3.list --env test --bucket rhachet-roles-ghlitch-test --prefix zzz-empty-bucket-test-never-exists/
   └─ 0 objects
"
`;

exports[`aws.s3.list given: [case19] --env names an env this skill does not serve when: [t0] skill runs with --env prd then: error output matches snapshot 1`] = `
"🐈 belay that...

🔮 aws.s3.list
   ├─ invalid env: prd
   └─ must be: test, prep, or prod
"
`;

exports[`aws.s3.list given: [case20] --limit is not a number when: [t0] skill runs with --limit ten then: error output matches snapshot 1`] = `
"🐈 belay that...

🔮 aws.s3.list
   ├─ invalid --limit: ten
   └─ must be: a whole number (e.g. 50)
"
`;

exports[`aws.s3.list given: [case21] a flag is passed with no value when: [t0] --env is the last token then: error output matches snapshot 1`] = `
"🐈 belay that...

🔮 aws.s3.list
   ├─ absent value for --env
   ├─ fix: pass one of test,prep,prod
   └─ hint: rhx aws.s3.list help
"
`;
